<resources>
    <string name="app_name">Sonder</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_log_in">Login</string>
    <string name="hint_password1">Password - Minimum of 6 characters</string>
    <string name="logo">Logo</string>
    <string name="catch_phrase">The people we know, the places we go.</string>
    <string name="login_or">-or-</string>
    <string name="login_register">Not yet a user? Register here</string>
    <string name="forgot_password">Forgot Password</string>

    <string name="hint_email">Email Address</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="hint_password2">Confirm password</string>
    <string name="hint_password0">Password</string>
    <string name="vcode">Verification Code</string>
    <string name="verify">Verify</string>
    <string name="resetCode">Reset Code</string>
    <string name="reset">Reset</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="request">Request</string>
    <string name="Confirm">Confirm</string>
    <string name="already_reset">Already have a reset code?</string>
    <string name="title_activity_maps_test">MapsTest</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_mapstest">Map</string>
    <string name="normal_map">Normal</string>
    <string name="hybrid_map">Hybrid</string>
    <string name="satellite_map">Satellite</string>
    <string name="terrain_map">Terrain</string>
    <string name="title_activity_tab_view">TabView</string>
    <string name="title_activity_navbar">Navbar</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_people">People</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_address_city_or_zip_code">Enter Address, City or Zip Code</string>
    <string name="todo">TODO</string>
</resources>
